# lcm-cli

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-18-record-replay.md
docs/superpowers/specs/: 2026-06-18-record-replay-design.md
src/lcm_cli/: __init__.py  __main__.py  cli.py  export.py  lcm_log.py  listener.py  protocol.py  source.py
src/lcm_cli/commands/: dashboard_cmd.py  node_list.py  play.py  record.py  topic_bw.py  topic_echo.py  topic_info.py  topic_list.py  topic_stats.py  type_list.py  type_show.py
src/lcm_cli/core/: discovery.py  lcm_type_builder.py  lcm_type_parser.py  stats.py
src/lcm_cli/dashboard/: __init__.py  data_bridge.py  field_extractor.py  ring_buffer.py  server.py
src/lcm_cli/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/lcm_cli/dashboard/frontend/src/: App.css  api.ts  types.ts
src/lcm_cli/dashboard/frontend/src/components/: ChannelPanel.tsx  Dashboard.tsx  PlotPanel.tsx  Toolbar.tsx
src/lcm_cli/dashboard/frontend/src/hooks/: useChannelData.ts  useWebSocket.ts
src/lcm_cli/display/: echo_display.py  stats_display.py  type_display.py
src/lcm_cli/static/dashboard/: index.html
src/lcm_cli/static/dashboard/assets/: index-BAwwkzy5.css  index-BdC9qMuW.js  index-Bv-MpXM4.js  index-C_QJhwwQ.js  index-CjB4DBup.css  index-DdPWr21-.css  index-OuoR9xAv.js  index-bsoqVx7R.js
src/lcm_tools/: cli.py  export.py  lcm_log.py  source.py
src/lcm_tools/commands/: node_list.py  play.py  record.py  topic_bw.py  topic_echo.py  topic_info.py  topic_list.py  topic_stats.py  type_list.py  type_show.py
src/lcm_tools/core/: discovery.py  lcm_type_builder.py  stats.py
src/lcm_tools/display/: echo_display.py  stats_display.py  type_display.py
tests/: __init__.py  conftest.py  helpers.py  test_data_bridge.py  test_echo_display.py  test_export.py  test_field_extractor.py  test_lcm_log.py  test_lcm_type_builder.py  test_lcm_type_parser.py  test_new_commands.py  test_play.py  test_protocol.py  test_record.py  test_ring_buffer.py  test_server.py  test_source.py  test_stats.py
